# cecxx

./: .clang-format  .clang-tidy  .env  .gitignore  .gitmodules  CMakeLists.txt  Justfile  README.md  TODO  defaults.hpp.in  flake.nix  main.c  shell.nix  test.sh
.github/workflows/: CMocka-test.yml  cmake.yml  gnu.yml  linux.yml  llvm.yml  main.yml
cmake/: Package.cmake  ProjectConfig.cmake  cecxxConfig.cmake.in  config.cmake
data/cec2014/: affine_info.json
example/: CMakeLists.txt  main.cpp
example/evaluator/: CMakeLists.txt  evaluate_each_problem.cpp  evaluate_separate_problem.cpp  main.cpp
example/runner/: CMakeLists.txt  main.cpp  optimizer.hpp
examples/: main.cpp
include/: affine_trans.h  basic_funcs.h  cec.h  utils.h
include/cec/: allocator.h  cec.h  context.h  session.h  types.h  util.h
include/cecxx/: enum.hpp  mdspan.hpp  types.hpp
include/cecxx/benchmark/: concepts.hpp  edition.hpp  evaluator.hpp  helpers.hpp  runner.hpp  types.hpp
include/cecxx/benchmark/cec_2013/: basic_problems.hpp  complex_problems.hpp  consts.hpp  problem_evaluation_mappings.hpp
include/cecxx/benchmark/cec_2014/: basic_problems.hpp  complex_problems.hpp  consts.hpp  hybrid_problems.hpp  problem_evaluation_mappings.hpp
include/cecxx/benchmark/cec_2017/: basic_problems.hpp  complex_problems.hpp  consts.hpp  hybrid_problems.hpp  problem_evaluation_mappings.hpp
include/cecxx/benchmark/detail/: context.hpp  evaluate.hpp  func_types.hpp  geom.hpp  types.hpp  util.hpp
include/cecxx/benchmark/detail/cec2017/: consts.hpp  evaluate.hpp
include/cecxx/benchmark/detail/cec2017/problems/: basic.hpp  complex.hpp  hybrid.hpp
include/cecxx/benchmark/detail/legacy/: affine_transformation.hpp
include/cecxx/benchmark/detail/legacy/functions/multimodal/: bi_rastrigin.hpp  schaffer.hpp
include/cecxx/benchmark/detail/problem/: basic.hpp  complex.hpp  hybrid.hpp
include/cecxx/benchmark/detail/problem_invokers/: affine_transformations.hpp  basic_problem_invoker.hpp  complex_problem_invoker.hpp  hybrid_problem_invoker.hpp
include/cecxx/benchmark/detail/runner/: coro.hpp  types.hpp  util.hpp
include/cecxx/detail/mdspan/__p0009_bits/: compressed_pair.hpp  config.hpp  default_accessor.hpp  dynamic_extent.hpp  extents.hpp  full_extent_t.hpp  layout_left.hpp  layout_right.hpp  layout_stride.hpp  macros.hpp  mdspan.hpp  no_unique_address.hpp  trait_backports.hpp  type_list.hpp
include/cecxx/detail/mdspan/__p1684_bits/: mdarray.hpp
include/cecxx/detail/mdspan/__p2630_bits/: strided_slice.hpp  submdspan.hpp  submdspan_extents.hpp  submdspan_mapping.hpp
include/cecxx/executor/: main.cpp
include/cecxx/functions/multimodal/: ackley.hpp  diff_powers.hpp  discus.hpp  escaffer.hpp  grie_rosen.hpp  griewank.hpp  happycat.hpp  hgbat.hpp  katsuura.hpp  levy.hpp  rastrigin.hpp  rosenbrock.hpp  schaffer.hpp  schwefel.hpp  step_rastrigin.hpp  weierstrass.hpp  zakharov.hpp
include/cecxx/functions/unimodal/: bent_cigar.hpp  ellips.hpp  sphere.hpp  sum_diff_pow.hpp
performance/: gmon.out  main  main.c  sun_cec.txt  sun_cec2.txt  sun_cec_sphere.txt
scripts/: run_compliance_tests.py
src/: basic_funcs.c  cec.c  consts.h  context.cpp  evaluator.cpp  interfaces.c  table_io.cpp  table_io.hpp  util.hpp  utils.c
src/benchmark/: cec2014.c  cec2014.h  context.cpp  evaluator.cpp  helpers.cpp  table_io.cpp  table_io.hpp  util.hpp
src/benchmark/cec_2013/: problem_evaluation_mappings.cpp
src/benchmark/cec_2014/: problem_evaluation_mappings.cpp
src/benchmark/cec_2017/: problem_evaluation_mappings.cpp
src/benchmark/detail/: context.cpp  evaluate.cpp
src/benchmark/detail/legacy/functions/multimodal/: bi_rastrigin.cpp  schaffer.cpp
src/context/: context.c
src/functions/multimodal/: ackley.cpp  diff_powers.cpp  discus.cpp  escaffer.cpp  grie_rosen.cpp  griewank.cpp  happycat.cpp  hgbat.cpp  katsuura.cpp  levy.cpp  rastrigin.cpp  rosenbrock.cpp  schaffer.cpp  schwefel.cpp  step_rastrigin.cpp  weierstrass.cpp  zakharov.cpp
src/functions/unimodal/: bent_cigar.cpp  ellips.cpp  sphere.cpp  sum_diff_pow.cpp
src/geometry/: trans.c  trans.h
src/io/: io.c  io.h
src/legacy/: affine_trans.c  affine_trans.cpp  affine_transformation.cpp  basic_funcs.c  complex_funcs.c  consts.h  hybrid_funcs.c  interfaces.c  interfaces.h
src/problem/: basic.c  basic.h
src/session/: benchmark_info.c  benchmark_info.h  session.c
src/util/: allocator.c  json.h  string.h
test/: CMakeLists.txt  test_cec2014.c  test_cec2015.c  test_cec2017.c  test_cec2019.c  test_cec2021.c
test/cecs/: cec2014.c  cec2014.h  cec2015.c  cec2015.h  cec2017.c  cec2017.h  cec2019.c  cec2019.h  cec2021.c  cec2021.h  readme.md
test/compliance/: CMakeLists.txt  cec2013.test.cpp  cec2014.test.cpp  cec2017.test.cpp
test/compliance/helpers/: cec_suite.hpp  combinators.hpp  oracle.hpp
test/compliance/oracle/: cec2013.cpp  cec2013.h  cec2014.cpp  cec2014.h  cec2017.h
test/gtest/: cec2017_oracle_compliance_test.cpp  cec2017_oracle_test.cpp
test/helpers/: cec_suite.hpp  combinators.hpp
test/oracle/: cec2017.cpp  cec2017.h
test/unit/: CMakeLists.txt  evaluator.test.cpp
